# YahooRequests

./: .gitignore  CHANGELOG.md  LICENSE  README.md  apikeys.csv  changelog.md  devfile.py  docs.md  pyproject.toml  readme.md  setup.cfg  setup.py  test_yahoorequests.py  workflow.yaml  yahoorequests.py
.github/workflows/: build.yml  main.yml  new.yml  publish.yml  test.yml  test_publish.yml  unit_test.yml  workflow.yml
YahooRequests/: __init__.py  tst.py  yahoorequests.py
YahooRequests.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
