[build-system]
requires = ["setuptools >= 42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "YahooRequests"
packages = [{ include = "YahooRequests" }]
version = "1.11"
description = "A simple Python library for getting stock prices and company names from Yahoo Finance."
authors = ["Theodor Gajhede <theodorgajhede@gmail.com>"]
include = ['CHANGELOG.md', 'LICENSE']
readme = 'README.md'
license = "MIT"
homepage = "https://github.com/TheodorGajhede/YahooRequests"
repository = "https://github.com/TheodorGajhede/YahooRequests.git"
keywords = ['Stocks','Yahoo','Finance',]

[tool.poetry.dependencies]
httpstatus = "^0.9.1"
datetime = "^1.5"
requests = "^2.26.0"
tabulate = "^0.8.10"
newsapi-python = "^2.5"

[tool.poetry.scripts]
yahoorequests = "YahooRequests.yahoorequests:main"
