[metadata]
name = yahoorequests
version = 0.1.3
description = A simple Python library for getting stock prices and company names from Yahoo Finance.
url = https://github.com/TheodorGajhede/YahooRequests
author = Theodor Gajhede
author_email = theodorgajhede@gmail.com
license = MIT

[options]
packages = yahoorequests
install_requires = requests

[options.entry_points]
console_scripts =
    yahoo_requests = yahoorequests.cli:main