[metadata]
name = yahoorequests
version = 0.1.5.5
description = A simple Python library for getting stock prices and company names from Yahoo Finance.
url = https://github.com/TheodorGajhede/YahooRequests
author = Theodor Gajhede
author_email = theodorgajhede@gmail.com
license = MIT

[options]
packages = yahoorequests
install_requires = requests

[options.entry_points]
console_scripts =
    yahoorequests = yahoorequests.cli:main